--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   html: ^0.15.4
   intl: ^0.19.0
   easy_debounce: ^2.0.3
+  throttling: ^2.0.1
 
 dev_dependencies:
   flutter_test:
