--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,9 @@ dependencies:
   http: ^1.2.1
   html: ^0.15.4
   intl: ^0.19.0
-  easy_debounce: ^2.0.3
-  throttling: ^2.0.1
+  async: ^2.11.0
+#  easy_debounce: ^2.0.3
+#  throttling: ^2.0.1
 
 dev_dependencies:
   flutter_test:
